--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "express-openid-connect": "^2.17.1",
         "express-session": "^1.18.1",
         "express-validator": "^7.2.0",
         "mongodb": "^6.10.0",
